# movie-lib-tools

./: .envrc.example  .gitignore  CLAUDE.md  README.md  cli.py  jellyfin.py  pyproject.toml  yts.py  yts_ui.py
scripts/: setup.sh
