[project]
name = "movie-library-cli"
version = "0.1.0"
description = "Jellyfin-driven low-res finder and YTS enrichment (no downloading)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "textual>=0.60.0",
]

[project.scripts]
movie-library-cli = "cli:main"
mlm = "cli:main"
ml = "cli:main"

 

[tool.setuptools]
py-modules = ["cli", "yts", "jellyfin"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
